--- a/app/src/main/res/layout/fragment_more_options_menu.xml
+++ b/app/src/main/res/layout/fragment_more_options_menu.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/PureBlack">
+    android:background="@color/PureBlack" >
 
     <Button
         android:id="@+id/signOutButton"
@@ -21,7 +21,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/removeBagButton"
+        android:id="@+id/resetPasswordButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/signOutButton"
