--- a/app/src/main/res/layout/fragment_add_bag.xml
+++ b/app/src/main/res/layout/fragment_add_bag.xml
@@ -49,7 +49,7 @@
         android:layout_marginRight="12dp"
         android:backgroundTint="@color/PrimaryBlue"
         android:fontFamily="@font/poppinsregular"
-        android:hint="Special Notes"
+        android:hint="Notes"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textColor="@color/PrimaryGrey"
